@@ -1,0 +1,10 @@
+package test.testng249;
+
+import org.testng.annotations.Test;
+
+public class B extends Base {
+  @Override
+   @Test
+   public void b() {
+   }
+}
