@@ -1,0 +1,9 @@
+package test.testng249;
+
+import org.testng.annotations.Test;
+
+public class Base {
+  @Test
+  public void b() {
+  }
+}
